# LastBlackBox

./: .gitignore  .gitmodules  BOM.csv  BOM.md  ENVIRONMENT.md  LastBlackBox.code-workspace  README.md  TODO.md  _config.yml  environment.yml  index.html  pyproject.toml  skeleton.md
admin/: course_notes.md  meetings.md  website_notes.md
boxes/: README.md
boxes/1_electrons/: README.md
boxes/2_sensors/: README.md
boxes/4_amplifiers/: README.md
boxes/63/: goals.md
boxes/?/: README.md  materials.csv
boxes/_template/: README.md  materials.csv
boxes/amplifiers/: README.md  goals.md  materials.csv  template.md  topics.md
boxes/atoms/: README.md  gif_test.md  goals.md  lessons.json  lessons.md  materials.csv  template.md  topics.md
boxes/audio/: README.md  materials.csv  template.md
boxes/behaviour/: README.md  goals.md  materials.csv
boxes/circuits/: README.md  materials.csv  template.md
boxes/computers/: README.md  README_new.md  goals.md  materials.csv  template.md
boxes/computers/pi-pico/blink/: CMakeLists.txt  blink.c
boxes/computers/pi-pico/hello/: CMakeLists.txt  hello.c
boxes/computers/pi-pico/i2c/: CMakeLists.txt  i2c.c
boxes/computers/pi-pico/walk/: CMakeLists.txt  walk.c
boxes/control/: README.md  goals.md  materials.csv  template.md  topics.md
boxes/data/: README.md  goals.md  materials.csv  template.md  topics.md
boxes/decisions/: README.md  materials.csv  schmitt_trigger.txt
boxes/electrons/: README.md  README_new.md  goals.md  lessons.json  lessons.md  materials.csv  tasks.md  template.md  topics.md
boxes/fpgas/: README.md  materials.csv  template.md
boxes/hearing/: README.md  goals.md  materials.csv
boxes/ics/: README.md  goals.md  materials.csv
boxes/intelligence/: README.md  goals.md  materials.csv  rasp_pi_D4.md  template.md
boxes/iot/: README.md  goals.md  materials.csv
boxes/learning/: README.md  data_funcs.py  goals.md  materials.csv  template.md
boxes/light/: README.md  goals.md  materials.csv  template.md  topics.md
boxes/linux/: README.md  lessons.md  template.md
boxes/logic/: README.md  goals.md  logic.md  materials.csv  template.md  topics.md
boxes/magnets/: README.md  goals.md  materials.csv  template.md  topics.md
boxes/memory/: README.md  goals.md  materials.csv  template.md  topics.md
boxes/motors/: README.md  goals.md  materials.csv  template.md  topics.md
boxes/networks/: README.md  goals.md  materials.csv  piClientBasic.c  piServerBasic.c  rpi2arduino.md  send_telegram.sh  template.md
boxes/power/: README.md  goals.md  materials.csv  template.md  topics.md
boxes/python/: README.md  goals.md  lessons.md  materials.csv  template.md  tests.py
boxes/reflexes/: README.md  goals.md  materials.csv
boxes/robotics/: README.md  materials.csv  template.md
boxes/security/: README.md  goals.md  materials.csv  template.md
boxes/sensors/: README.md  goals.md  materials.csv  template.md  topics.md
boxes/servers/: README.md  template.md
boxes/speech/: README.md  materials.csv
boxes/systems/: README.md  connecting.md  goals.md  lessons.md  materials.csv  template.md
boxes/transistors/: README.md  goals.md  materials.csv  template.md  topics.md
boxes/vision/: README.md  goals.md  materials.csv  template.md
boxes/websites/: README.md  goals.md  materials.csv  template.md
boxes/white/: README.md  materials.csv
course/: README.md
course/_designs/: README.md
course/_engine/: README.md  generate_readmes.py  generate_templates.py
course/_materials/: BOM_01.csv  BOM_10.csv  BOM_11.csv  generate_BOM.py  generate_packing.py  packing_01.csv  packing_10.csv  packing_11.csv
course/_videos/: README.md  generate_thumbnails.py  generate_video_list.py
course/bootcamp/: BOM.csv  README.md
course/buildabrain/: README.md
course/enb/: README.md  sync_with_bootcamp.sh
course/lectures/: convert_images.py  convert_to_html.py  (+1 more)
docs/: CNAME  Gemfile  README.md  _config.yml  index.html  sync_repo_to_site.sh
kit/: BOM.csv  README.md  generate_BOM.py
site/: .env  README.md  __init__.py  build.py  build_site.py  manifest.json  output.html  service_worker.js
(+4551 files in other folders)
